public class MediaPlayer {
}
