import java.util.ArrayList;

public class SeriesData {
    public static ArrayList<Series> hentSerieListe() {

        ArrayList<Series> SerieListe = new ArrayList<>();

        SerieListe.add(new Series("Breaking Bad", 2008, "Crime, Drama, Thriller", 9.5));
        SerieListe.add(new Series("The Sopranos", 1999, "Crime, Drama", 9.2));
        SerieListe.add(new Series("The Wire", 2002, "Crime, Drama, Thriller", 9.3));
        SerieListe.add(new Series("Game of Thrones", 2011, "Action, Adventure, Drama", 9.2));
        SerieListe.add(new Series("Stranger Things", 2016, "Drama, Fantasy, Horror", 8.7));
        SerieListe.add(new Series("The Crown", 2016, "Biography, Drama, History", 8.6));
        SerieListe.add(new Series("Sherlock", 2010, "Crime, Drama, Mystery", 9.1));
        SerieListe.add(new Series("Friends", 1994, "Comedy, Romance", 8.9));
        SerieListe.add(new Series("The Office", 2005, "Comedy", 8.9));
        SerieListe.add(new Series("Better Call Saul", 2015, "Crime, Drama", 8.8));
        SerieListe.add(new Series("True Detective", 2014, "Crime, Drama, Mystery", 8.9));
        SerieListe.add(new Series("Fargo", 2014, "Crime, Drama, Thriller", 8.9));
        SerieListe.add(new Series("The Walking Dead", 2010, "Drama, Horror, Thriller", 8.2));
        SerieListe.add(new Series("House of Cards", 2013, "Drama", 8.7));
        SerieListe.add(new Series("Mad Men", 2007, "Drama", 8.6));
        SerieListe.add(new Series("Westworld", 2016, "Drama, Mystery, Sci-Fi", 8.6));
        SerieListe.add(new Series("The Mandalorian", 2019, "Action, Adventure, Fantasy", 8.7));
        SerieListe.add(new Series("Narcos", 2015, "Biography, Crime, Drama", 8.8));
        SerieListe.add(new Series("House", 2004, "Drama, Mystery", 8.7));
        SerieListe.add(new Series("Lost", 2004, "Adventure, Drama, Fantasy", 8.3));
        SerieListe.add(new Series("Dexter", 2006, "Crime, Drama, Mystery", 8.6));
        SerieListe.add(new Series("The X-Files", 1993, "Drama, Mystery, Sci-Fi", 8.7));
        SerieListe.add(new Series("Vikings", 2013, "Action, Adventure, Drama", 8.5));
        SerieListe.add(new Series("Peaky Blinders", 2013, "Crime, Drama", 8.8));
        SerieListe.add(new Series("Black Mirror", 2011, "Drama, Sci-Fi, Thriller", 8.8));
        SerieListe.add(new Series("The Witcher", 2019, "Action, Adventure, Drama", 8.2));
        SerieListe.add(new Series("Money Heist", 2017, "Action, Crime, Mystery", 8.3));
        SerieListe.add(new Series("Ozark", 2017, "Crime, Drama, Thriller", 8.4));
        SerieListe.add(new Series("The Boys", 2019, "Action, Comedy, Crime", 8.7));
        SerieListe.add(new Series("Succession", 2018, "Comedy, Drama", 8.8));

        return SerieListe;
    }
}